--- a/index.html
+++ b/index.html
@@ -5,31 +5,66 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">  
+  <title>地元の魅力</title>
+  <link rel="stylesheet" type="text/css" href="style.css" /> 
 </head>
 
 <body>
-  <h1>Waffle Camp</h1>
+  <h1>地元の魅力</h1>
   <div class="div1">
-    <h2>世界の女性の名言</h2>
-    <p>"Am I good enough? Yes I am,"</p>
-    <p>by Michelle Obama</p>
+    <h2>はじめに</h2>
+    <p>"山に囲まれた地元が好き"</p>
+    <p>みなさんの地元の「好き」は何ですか？</p>
+    <p>私は留学をしたいと思うようになってから、この問いを自身に問いかけることが多くなりました。</p>
+    <p>生まれ育った地元が好き。</p>
+    <p>でも、自分が思う魅力を他の人に上手く伝えられるやろか。</p>
+    <p>そこで、私から見た地元の魅力を形にするためにこのページを開設しました。</p>
   </div>
-  <div class="div2">  
-    <h2>Who is Michelle?</h2>
-      <p>ミッシェル・オバマはオバマ前大統領のファーストレディ。</p>
-      <p>ハーバード大学のロースクールを卒業し、弁護士となった。</p>
-      <p>その後夫のバラクが大統領となり、ファーストレディに。</p>
-      <p>現在は女性や黒人のエンパワメントに力をいれて活動を行っている。</p>
-      <img src="https://i.ibb.co/NYdf8kk/1478944964-michelle-obama.jpg" alt="ステージ上でマイクの前に立つミシェル・オバマ">
+  <div class="div3"> では、さっそく見ていきましょう！</div>
+  <div class="div4">  
+    <h2>大石神社</h2>
+      <p>元禄時代、赤穂浪士を率いた大石内蔵助を祀る大石神社。</p>
+      <p>私は幼い頃から初詣で毎年家族で参拝している。</p>
+      <p>境内にはおっとりしたポニーの花子ちゃんがいるのが印象的。</p>
+      <p>毎年12月14日には赤穂浪士が列を成す、山科義士まつりが開催される。</p>
+      <a href="http://www.ooishijinja.com/index.php?data=./data/l2/">大石神社HP</a>
+      <br clear="left">
+      <img src="/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/4e/00/4ece/UNADJUSTEDNONRAW_thumb_4ece.jpg">
+　　　 <p>写真：桜を見に行った時に撮影</p>
   </div> 
+  <div class="div5">  
+    <h2>坂上田村麻呂の墓</h2>
+      <p>平安時代、征夷大将軍であった坂上田村麻呂は死後も平安京の守護神として山科の地に葬られた。</p>
+      <p>また、坂上田村麻呂は清水寺を建設したことでも知られている。</p>
+      <p>現在、墓の周囲は公園となり、辺りには子供たちの賑やかな声が響き渡っている。</p>
+      <a href="https://ja.kyoto.travel/tourism/single02.php?category_id=9&tourism_id=274">京都観光ナビ</a>
+      <br clear="left">
+      <img src="/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/50/00/5021/UNADJUSTEDNONRAW_thumb_5021.jpg">
+      <p class=downloadpic>写真：坂上田村麻呂が山科・勧修学区のヒーローに｜リビング京都より</p>
+  </div> 
+  <div class="div6">  
+    <h2>ぶどうの名産地</h2>
+      <p>私の地元は、京都市内では知る人ぞ知るぶどうの名産地である。</p>
+      <p>夏になるとぶどうのシーズンに入り、あちこちで美味しいぶどうを求めるお客さんの列ができる。</p>
+      <p>旨味がギュッと詰まった、ピオーネとシャインマスカットが私のオススメだ。</p>
+      <img src="/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/50/00/501b/UNADJUSTEDNONRAW_thumb_501b.jpg
+      ">
+      <p class=downloadpic>朝どれのシャインマスカットとピオーネ#これから頂きます！</p>
+  </div> 
+  <div class="div7">
+    <h2>終わりに</h2>
+    <p>生まれ育った町は全てが"当たり前"になり、魅力を感じることが少なかったように思います。</p>
+    <p>でも、またこのページを作る機会を経て少しずつ見えてきたような気がします。</p>
+    <p>このページを見て、より多くの人にそれぞれのふるさとを振り返ってもらい、新たな地元の魅力を発見してもらえると嬉しいです。
+  </div>
 </body>
 
 </html>
-<div class="div3">
+<div class="div">
   <h2>どんなときも主役であれ</h2>
   <p>Serendipity</p>
 </div>
-<div class="div4">  
+<div class="div">  
   <h2>Who is りなてぃー?</h2>
   <p>現在、高2の学生。</p>
   <p>今までミュージカルや朗読で活躍してきた。</p>
