--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
 </body>
 
 </html>
-<div class="div">
-  <h2>どんなときも主役であれ</h2>
-  <p>Serendipity</p>
+<div class="footer">
+  <div class="footer-logo">どんなときも主役であれ</div>
+  <div class="footer-logo2">Serendipity</div>
+<div class="footer-list">  
+  <ul>Who is りなてぃ?</ul>
+    <li>現在、高2の学生。</li>
+    <li>今までミュージカルや朗読で活躍してきた。</li>
+    <li>私はワクワクすることが好き。
+    <li>常に感動を求めて行動していて、大勢で１つのものを作り上げることも大好き。</li>
+    <li>最近は子ども映画祭の運営等にも力を入れている。</li>
 </div>
-<div class="div">  
-  <h2>Who is りなてぃー?</h2>
-  <p>現在、高2の学生。</p>
-  <p>今までミュージカルや朗読で活躍してきた。</p>
-  <p>私はワクワクすることが好きです！常に感動を求めて行動していて、大勢で１つのものを作り上げることも大好きです。最近は子ども映画祭の運営等にも力を入れています。</p>
 </div>
