--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-  <h1>地元の魅力</h1>
+  <header>
+    <h1 class="headline">
+      <a class="headline-1">My Home Town</a>
+      <a class="headline-2">山科</a>
+    </h1>>
+    <ul class="nav-list">
+      <li class="nav-list-item">
+        <a>Home</a>
+      </li> 
+      <li class="nav-list-item"> Topic</li>
+      <li class="nav-list-item">Reference</li>
+      <li class="nav-list-item">Who is Aponi?</li>
+    </ul>>
+  </header>
+  <contents>
   <div class="div1">
     <h2>はじめに</h2>
     <p>"山に囲まれた地元が好き"</p>
@@ -57,18 +71,16 @@
     <p>でも、またこのページを作る機会を経て少しずつ見えてきたような気がします。</p>
     <p>このページを見て、より多くの人にそれぞれのふるさとを振り返ってもらい、新たな地元の魅力を発見してもらえると嬉しいです。
   </div>
+  </contents>>
+  <footer>
+    　　<ul class="footer-menu">
+         <li>Home ｜</li>
+         <li>Topic ｜</li>
+         <li>Reference ｜</li>
+         <li>Who is Aponi?</li>
+        </ul>
+        <p>Thank you for watching!!</p>
+      </footer>
 </body>
 
 </html>
-<div class="footer">
-  <div class="footer-logo">どんなときも主役であれ</div>
-  <div class="footer-logo2">Serendipity</div>
-<div class="footer-list">  
-  <ul>Who is りなてぃ?</ul>
-    <li>現在、高2の学生。</li>
-    <li>今までミュージカルや朗読で活躍してきた。</li>
-    <li>私はワクワクすることが好き。
-    <li>常に感動を求めて行動していて、大勢で１つのものを作り上げることも大好き。</li>
-    <li>最近は子ども映画祭の運営等にも力を入れている。</li>
-</div>
-</div>
