--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>毎年12月14日には赤穂浪士が列を成す、山科義士まつりが開催される。</p>
       <a href="http://www.ooishijinja.com/index.php?data=./data/l2/">大石神社HP</a>
       <br clear="left">
-      <img src="/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/4e/00/4ece/UNADJUSTEDNONRAW_thumb_4ece.jpg">
+      <img src="P3250599.jpg">
 　　　 <p>写真：桜を見に行った時に撮影</p>
   </div> 
   <div class="div5">  
@@ -61,7 +61,7 @@
       <p>私の地元は、京都市内では知る人ぞ知るぶどうの名産地である。</p>
       <p>夏になるとぶどうのシーズンに入り、あちこちで美味しいぶどうを求めるお客さんの列ができる。</p>
       <p>旨味がギュッと詰まった、ピオーネとシャインマスカットが私のオススメだ。</p>
-      <img src="/Users/ririn087/Pictures/写真ライブラリ.photoslibrary/resources/proxies/derivatives/50/00/501b/UNADJUSTEDNONRAW_thumb_501b.jpg
+      <img src="IMG_3582.jpeg"
       ">
       <p class=downloadpic>朝どれのシャインマスカットとピオーネ#これから頂きます！</p>
   </div> 
