--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       </li> 
       <li class="nav-list-item"><a href="#abc">Topics</a></li>
       <li class="nav-list-item"><a href="#def">References</a></li>
-      <li class="nav-list-item">Who is Aponi?</li>
+      
+      <li class="nav-list-item"><a href="./index2.html">Who is Aponi?</a></li>
     </ul>>
     <ul class="nav-list">
       <div style="position:absolute; top:30px; right:110px;">
