--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
     </h1>>
     <ul class="nav-list">
       <li class="nav-list-item">
-        <a>Home</a>
+        <a href="./index.html">Home</a>
       </li> 
       <li class="nav-list-item"> Topic</li>
       <li class="nav-list-item">Reference</li>
