--- a/index2.html
+++ b/index2.html
@@ -11,17 +11,14 @@
 
 <body>
   <header>
-    <h1 class="headline">
+    <h1 class="headline" id="ghi">
       <a class="headline-1">My Home Town</a>
       <a class="headline-2">山科</a>
-    </h1>>
+    </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
         <a href="./index.html">Home</a>
       </li> 
-      <li class="nav-list-item"> Topic</li>
-      <li class="nav-list-item">Reference</li>
-      <li class="nav-list-item">Who is Aponi?</li>
     </ul>>
   </header>
   <contents>
@@ -44,10 +41,8 @@
   </contents>
   <footer>
     　　<ul class="footer-menu">
-         <li>Home ｜</li>
-         <li>Topic ｜</li>
-         <li>Reference ｜</li>
-         <li>Who is Aponi?</li>
+         <li><a href="#ghi">Top ｜</a></li>
+         <li><a href="./index.html">Home</a></li>
         </ul>
         <p>Thank you for watching!!</p>
       </footer>
