--- a/index-english.html
+++ b/index-english.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000">  
   <title>Hometown Yamashina</title>
   <link rel="stylesheet" type="text/css" href="style-english.css" /> 
+  
 </head>
 
 <body>
@@ -48,11 +49,12 @@
   <div class="div3"> Let's take a look!</div>
   <div class="div4">  
     <h2 id="abc">Oishi-shrine</h2>
-      <p>It's dedicated to Kuranosuke Oishi who led Akoh masterless samurais in the late 17th century.</p>
+      <p>It's dedicated to Kuranosuke Oishi who was a hero. </p>
+      <p>He led Akoh masterless samurais to Yamashina in the late 17th century.</p>
       <p>I have visited there with my family every New Year since I was a child.</p>
       <p>There is a cute pony Hanako.</p>
       <p>It is held Yamashina Samurai Festival and Akoh masterless samurais walk in a line in December 14th every year.</p>
-      <a href="http://www.ooishijinja.com/index.php?data=./data/l2/">大石神社HP</a>
+      <a href="http://www.ooishijinja.com/index.php?data=./data/l2/">Oishi-shrine HP</a>
       <br clear="left">
       <img src="index写真/大石神社.jpg"
       width="650"
@@ -66,7 +68,7 @@
       <p>He enshrined there as a tutelary god of the then capital, Heiankyo.</p>
       <p>He is also known for building Kiyomizu temple.</p>
       <p>Now, around the tomb became a park and many children often play there.</p>
-      <a href="https://ja.kyoto.travel/tourism/single02.php?category_id=9&tourism_id=274">京都観光ナビ</a>
+      <a href="https://ja.kyoto.travel/tourism/single02.php?category_id=9&tourism_id=274">Kyoto sightseeing navi</a>
       <br clear="left">
       <img src="index写真/坂上田村麻呂の墓.jpeg"
       width="650"
@@ -96,12 +98,14 @@
     <a href="https://kyotopi.jp/articles/C0ZMP">Grapes</a>
   </div>  
   </contents>>
-  <footer>
+ <footer>
     　　<ul class="footer-menu">
+      　　<div align="" style="display:inline">
          <li><a href="#menu_test">Top ｜</a></li>
          <li><a href="#abc">Topics ｜</a></li>
          <li><a href="#def">References ｜</a></li>
-         <li>Who is Aponi?</li>
+         <li><a href="./index2.html">Who is Aponi?</a></li>
+         </div>
         </ul>
         <p>Thank you for watching!!</p>
       </footer>
