--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="headline-1">ふるさと</a>
       <a class="headline-2">山科</a>
       </nav>
-    </h1>>
+    </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
         <a href="#menu_test">Top</a>
@@ -100,7 +100,7 @@
          <li><a href="#menu_test">Top ｜</a></li>
          <li><a href="#abc">Topics ｜</a></li>
          <li><a href="#def">Reference ｜</a></li>
-         <li>Who is Aponi?</li>
+         <li><a href="./index2.html">Who is Aponi?</a></li>
         </ul>
         <p>Thank you for watching!!</p>
       </footer>
