--- a/index2.html
+++ b/index2.html
@@ -28,8 +28,13 @@
             どんなに些細なことでも感謝できる、<BR>
             私はそんな人でありたい。
         </p>
-      </div>
-      <div class="div4">  
+    </div>
+    <div class="div3-1">
+        <h2><U>Serendipity</U></h2>
+        <p>A miraculous encounter is my treasure.</p>
+        <p>I'm always grateful for everything.</p>
+    </div>
+    <div class="div4">  
         <h2>Who is Who is Aponi?</h2>
         <p>高校生</p>
         <p>今までミュージカルや朗読やイベントのボランティアに<BR>
@@ -37,7 +42,16 @@
         </p>
         <p>＃ワクワク好き #HTML初挑戦 #映画鑑賞
         </p>
-      </div>
+    </div>
+    <div class="div4-1">  
+      <h2><U>Who is Who is Aponi?</U></h2>
+      <p>I'm a high school student.</p>
+      <p>I've tried to play musicals,take part in recitation contests<BR>
+          and volunteer for events.
+      </p>
+      <p>＃Excited #My first try of HTML #Watching movies
+      </p>
+  </div>
   </contents>
   <footer>
     　　<ul class="footer-menu">
