--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">  
+  <meta name="theme-color" content="#000000">
   <title>Who is Aponi?</title>
-  <link rel="stylesheet" type="text/css" href="style2.css" /> 
+  <link rel="stylesheet" type="text/css" href="style2.css" />
 </head>
 
 <body>
@@ -18,48 +18,48 @@
     <ul class="nav-list">
       <li class="nav-list-item">
         <a href="./index.html">Home</a>
-      </li> 
+      </li>
     </ul>>
   </header>
-  <contents>
+  <main>
     <div class="div3">
-        <h2>Serendipity</h2>
-        <p>偶然な巡り会いこそが宝物。<BR>
-            どんなに些細なことでも感謝できる、<BR>
-            私はそんな人でありたい。
-        </p>
+      <h2>Serendipity</h2>
+      <p>偶然な巡り会いこそが宝物。<BR>
+        どんなに些細なことでも感謝できる、<BR>
+        私はそんな人でありたい。
+      </p>
     </div>
     <div class="div3-1">
-        <h2><U>Serendipity</U></h2>
-        <p>A miraculous encounter is my treasure.</p>
-        <p>I'm always grateful for everything.</p>
+      <h2><U>Serendipity</U></h2>
+      <p>A miraculous encounter is my treasure.</p>
+      <p>I'm always grateful for everything.</p>
     </div>
-    <div class="div4">  
-        <h2>Who is Who is Aponi?</h2>
-        <p>高校生</p>
-        <p>今までミュージカルや朗読やイベントのボランティアに<BR>
-            力を入れてきた。
-        </p>
-        <p>＃ワクワク好き #HTML初挑戦 #映画鑑賞
-        </p>
+    <div class="div4">
+      <h2>Who is Who is Aponi?</h2>
+      <p>高校生</p>
+      <p>今までミュージカルや朗読やイベントのボランティアに<BR>
+        力を入れてきた。
+      </p>
+      <p>＃ワクワク好き #HTML初挑戦 #映画鑑賞
+      </p>
     </div>
-    <div class="div4-1">  
+    <div class="div4-1">
       <h2><U>Who is Who is Aponi?</U></h2>
       <p>I'm a high school student.</p>
       <p>I've tried to play musicals,take part in recitation contests<BR>
-          and volunteer for events.
+        and volunteer for events.
       </p>
       <p>＃Excited #My first try of HTML #Watching movies
       </p>
-  </div>
-  </contents>
+    </div>
+  </main>
   <footer>
     　　<ul class="footer-menu">
-         <li><a href="#ghi">Top ｜</a></li>
-         <li><a href="./index.html">Home</a></li>
-        </ul>
-        <p>Thank you for watching!!</p>
-      </footer>
+      <li><a href="#ghi">Top ｜</a></li>
+      <li><a href="./index.html">Home</a></li>
+    </ul>
+    <p>Thank you for watching!!</p>
+  </footer>
 </body>
 
 </html>
