--- a/index.html
+++ b/index.html
@@ -4,106 +4,104 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">  
+  <meta name="theme-color" content="#000000">
   <title>地元の魅力</title>
-  <link rel="stylesheet" type="text/css" href="style.css" /> 
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
   <header>
     <h1 class="headline">
       <nav id="menu_test">
-      <a class="headline-1">ふるさと</a>
-      <a class="headline-2">山科</a>
+        <a class="headline-1">ふるさと</a>
+        <a class="headline-2">山科</a>
       </nav>
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
         <a href="#menu_test">Top</a>
-      </li> 
+      </li>
       <li class="nav-list-item"><a href="#abc">Topics</a></li>
       <li class="nav-list-item"><a href="#def">References</a></li>
-      
+
       <li class="nav-list-item"><a href="./index2.html">Who is Aponi?</a></li>
-    </ul>>
+    </ul>
     <ul class="nav-list">
       <div style="position:absolute; top:30px; right:110px;">
-      <li class="nav-list-item2"><a href="index.html">🇯🇵</a></li>
+        <li class="nav-list-item2"><a href="index.html">🇯🇵</a></li>
       </div>
       <div style="position:absolute; top:30px; right:50px;">
-      <li class="nav-list-item2"><a href="./index-english.html">🇬🇧</a></li>
+        <li class="nav-list-item2"><a href="./index-english.html">🇬🇧</a></li>
       </div>
     </ul>
   </header>
-  <contents>
-  <div class="div1">
-    <h2><U>はじめに</U></h2>
-    <p>"山に囲まれた地元が好き"</p>
-    <p>みなさんの地元の「好き」は何ですか？</p>
-    <p>私は留学をしたいと思うようになってから、この問いを自身に問いかけることが多くなりました。</p>
-    <p>生まれ育った地元が好き。</p>
-    <p>でも、自分が思う魅力を他の人に上手く伝えられるやろか。</p>
-    <p>そこで、私から見た地元の魅力を形にするためにこのページを開設しました。</p>
-  </div>
-  <div class="div3"> では、さっそく見ていきましょう！</div>
-  <div class="div4">  
-    <h2 id="abc"><U>大石神社</U></h2>
+  <main>
+    <div class="div1">
+      <h2><U>はじめに</U></h2>
+      <p>"山に囲まれた地元が好き"</p>
+      <p>みなさんの地元の「好き」は何ですか？</p>
+      <p>私は留学をしたいと思うようになってから、この問いを自身に問いかけることが多くなりました。</p>
+      <p>生まれ育った地元が好き。</p>
+      <p>でも、自分が思う魅力を他の人に上手く伝えられるやろか。</p>
+      <p>そこで、私から見た地元の魅力を形にするためにこのページを開設しました。</p>
+    </div>
+    <div class="div3"> では、さっそく見ていきましょう！</div>
+    <div class="div4">
+      <h2 id="abc"><U>大石神社</U></h2>
       <p>元禄時代、赤穂浪士を率いた大石内蔵助を祀る大石神社。</p>
       <p>私は幼い頃から初詣で毎年家族で参拝している。</p>
       <p>境内にはおっとりしたポニーの花子ちゃんがいるのが印象的。</p>
       <p>毎年12月14日には赤穂浪士が列を成す、山科義士まつりが開催される。</p>
       <a href="http://www.ooishijinja.com/index.php?data=./data/l2/">大石神社HP</a>
       <br clear="left">
-      <img src="index写真/大石神社.jpg"
-      width="650"
-     height="450">
-　　　 <p>桜を見に行った時に撮影</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.4350496372626!2d135.79502546523943!3d34.970766030365944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf291d328a8c0e09!2z5aSn55-z56We56S-!5e0!3m2!1sja!2sjp!4v1598003370092!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>">
-  </div> 
-  <div class="div5">  
-    <h2><U>坂ノ上田村麻呂の墓</U></h2>
+      <img src="index写真/大石神社.jpg" width="650" height="450">
+      　　　 <p>桜を見に行った時に撮影</p>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.4350496372626!2d135.79502546523943!3d34.970766030365944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf291d328a8c0e09!2z5aSn55-z56We56S-!5e0!3m2!1sja!2sjp!4v1598003370092!5m2!1sja!2sjp"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>">
+    </div>
+    <div class="div5">
+      <h2><U>坂ノ上田村麻呂の墓</U></h2>
       <p>平安時代、征夷大将軍であった坂ノ上田村麻呂は死後も平安京の守護神として山科の地に葬られた。</p>
       <p>また、坂ノ上田村麻呂は清水寺を建設したことでも知られている。</p>
       <p>現在、墓の周囲は公園となり、平日の午後には子供たちの賑やかな声が響き渡っている。</p>
       <a href="https://ja.kyoto.travel/tourism/single02.php?category_id=9&tourism_id=274">京都観光ナビ</a>
       <br clear="left">
-      <img src="index写真/坂上田村麻呂の墓.jpeg"
-      width="650"
-     height="450">
+      <img src="index写真/坂上田村麻呂の墓.jpeg" width="650" height="450">
       <p class="downloadpic">坂ノ上田村麻呂の墓がある公園</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1352.5891690068934!2d135.80736864238796!3d34.970410209484214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5793b238666ad0bd!2z5Z2C5LiK55Sw5p2R6bq75ZGC44Gu5aKT!5e0!3m2!1sja!2sjp!4v1598003878063!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-  </div> 
-  <div class="div6">  
-    <h2><U>ぶどうの名産地</U></h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1352.5891690068934!2d135.80736864238796!3d34.970410209484214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5793b238666ad0bd!2z5Z2C5LiK55Sw5p2R6bq75ZGC44Gu5aKT!5e0!3m2!1sja!2sjp!4v1598003878063!5m2!1sja!2sjp"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <div class="div6">
+      <h2><U>ぶどうの名産地</U></h2>
       <p>私の地元は、京都市内では知る人ぞ知るぶどうの名産地である。</p>
       <p>夏になるとぶどうのシーズンに入り、あちこちで美味しいぶどうを求めるお客さんの列ができる。</p>
       <p>旨味がギュッと詰まった、ピオーネとシャインマスカットが私のオススメだ。</p>
-      <img src="index写真/ぶどう.jpeg"
-      width="650"
-     height="450">
+      <img src="index写真/ぶどう.jpeg" width="650" height="450">
       <p class=downloadpic>朝どれのシャインマスカットとピオーネ#これから頂きます！</p>
-  </div> 
-  <div class="div7">
-    <h2><U>終わりに</U></h2>
-    <p>生まれ育った町は全てが"当たり前"になり、魅力を感じることが少なかったように思います。</p>
-    <p>でも、またこのページを作る機会を経て少しずつ見えてきたような気がします。</p>
-    <p>このページを見て、より多くの人にそれぞれのふるさとを振り返ってもらい、新たな地元の魅力を発見してもらえると嬉しいです。
-  </div>
-  <div class="div8">
-    <h2 id="def">参考</h2>
-    <a href="http://www.asahi.com/area/kyoto/articles/MTW20190322270150001.html">大石内蔵助について</a><BR>
-    <a href="https://kyotopi.jp/articles/C0ZMP">ぶどうについて</a>
-  </div>  
-  </contents>>
+    </div>
+    <div class="div7">
+      <h2><U>終わりに</U></h2>
+      <p>生まれ育った町は全てが"当たり前"になり、魅力を感じることが少なかったように思います。</p>
+      <p>でも、またこのページを作る機会を経て少しずつ見えてきたような気がします。</p>
+      <p>このページを見て、より多くの人にそれぞれのふるさとを振り返ってもらい、新たな地元の魅力を発見してもらえると嬉しいです。
+    </div>
+    <div class="div8">
+      <h2 id="def">参考</h2>
+      <a href="http://www.asahi.com/area/kyoto/articles/MTW20190322270150001.html">大石内蔵助について</a><BR>
+      <a href="https://kyotopi.jp/articles/C0ZMP">ぶどうについて</a>
+    </div>
+  </main>
   <footer>
     　　<ul class="footer-menu">
-         <li><a href="#menu_test">Top ｜</a></li>
-         <li><a href="#abc">Topics ｜</a></li>
-         <li><a href="#def">Reference ｜</a></li>
-         <li><a href="./index2.html">Who is Aponi?</a></li>
-        </ul>
-        <p>Thank you for watching!!</p>
-      </footer>
+      <li><a href="#menu_test">Top ｜</a></li>
+      <li><a href="#abc">Topics ｜</a></li>
+      <li><a href="#def">Reference ｜</a></li>
+      <li><a href="./index2.html">Who is Aponi?</a></li>
+    </ul>
+    <p>Thank you for watching!!</p>
+  </footer>
 </body>
 
 </html>
